# ghpending

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
packaging/aur/: PKGBUILD  PKGBUILD-bin  README.md
src/: cli.rs  config.rs  display.rs  format.rs  github.rs  github_client.rs  main.rs  theme.rs
src/commands/: add.rs  digest.rs  list.rs  mod.rs  remove.rs
